--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.15"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.41",
